added basic error handler

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -8,6 +8,11 @@
   <ItemGroup>
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
     <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0-clinteastwood" />
+    <PackageReference Include="Nancy.Serialization.JsonNet" Version="2.0.0-clinteastwood" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Routers\" />
   </ItemGroup>
 
 </Project>
