added rethinkdb and continued search

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Nancy" Version="2.0.0-clinteastwood" />
     <PackageReference Include="Nancy.Hosting.Self" Version="2.0.0-clinteastwood" />
     <PackageReference Include="Nancy.Serialization.JsonNet" Version="2.0.0-clinteastwood" />
+    <PackageReference Include="RethinkDb.Driver" Version="2.3.23" />
   </ItemGroup>
 
 </Project>
